tests/ui/parser/issues/issue-49040.rs
#![allow(unused_variables)]; //~ ERROR expected item, found `;`
fn foo() {}
//~^ ERROR `main` function

// ferrocene-annotations: fls_8jb3sjqamdpu
// Program Entry Point
